--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "Index.js"
   },
-  "author": "",
+  "author": "FAN02DLET - ERIK",
   "license": "ISC"
 }
