--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "index.js",
+    "build": "index.js",
     "dev": "next index.js"
   },
   "author": "FAN02DLET - ERIK",
